2011-04-06 Aleksandar Stojsavljevic
  * Verifier: Improved verification (added checking for OCSP url inside certificate, added validation of TS server's certificate against keystore)

2011-04-01 Aleksandar Stojsavljevic
  * Verifier: removed certificateValid flag from SignatureVerification class
  * Verifier: introduced more complex checking for certification validity with methods getValidationCodes(VerificationResult) and getValidationCode(SignatureVerification, boolean) 

2011-03-30 Josef Cacek
  * Verifier checks the certification levels (and following modifications)

2011-03-30 Josef Cacek (1.1.9 test)
  * Verifier doesn't use a given keystores directly, it creates in-memory keystore now
  * Verifier validates the TSA certificates too
  
2011-03-29 Josef Cacek
  * Support for SunPKCS11 security provider registration at during application startup (additional configuration in conf.properties)  
  * Added option which allows to disable Acrobat 6 layer mode (in visible signature settings) tracker#3250105  
  * Font size setting applied also for "Signature name and description" display mode as a maximal allowed size 
    - i.e. it can be generated smaller in the result tracker#3201238
  * Added chapter Advanced application configuration into the documentation (JSignPdf Quick Start Guide)  
  * Visually separate the Append signature checkbox (it's not related to certification level)  

2011-03-28 Josef Cacek
  * Verifier updates suggested in http://sourceforge.net/projects/jsignpdf/forums/forum/782217/topic/4432329

2011-03-13 Josef Cacek
  * Java Runtime Environment update (6u24)

2011-03-11 Josef Cacek
  * setting default OCSP server URL

2011-01-09 Josef Cacek (1.1.1)
  * created l4j.ini files for exe launchers - JRE maximum memory is configurable now

2010-12-22 Josef Cacek
  * checking known critical extensions is disabled by default

2010-11-18 Josef Cacek
  * added some "well-known" certificate critical extensions 

2010-10-27 Josef Cacek (1.1.0)