@@ -41,6 +41,7 @@ console.noOCSPURL                     = OCSP server URL not found in Certificate
 console.processing                    = Processing (it may take a while) ...
 console.readingCRLs                   = Reading CRLs
 console.readingOCSP                   = Getting OCSP data from URL: {0}
+console.renderModeFallback            = The Render mode of visible signature is set to "Image and description" but no image was provided. The mode "Description only" will be used.
 console.setAcro6Layers                = Use only layers recommend by Acrobat 6: {0}
 console.setCertificationLevel         = Setting certification level
 console.setContact                    = Setting contact: {0}
