@@ -42,6 +42,7 @@ console.noOCSPURL                     = Adresa OCSP serveru v certifik\u00E1tu n
 console.processing                    = Zpracov\u00E1v\u00E1m (m\u016F\u017Ee to chv\u00EDli zabrat) ...
 console.readingCRLs                   = Na\u010D\u00EDt\u00E1n\u00ED seznamu CRL
 console.readingOCSP                   = Z\u00EDsk\u00E1v\u00E1n\u00ED OCSP dat z URL: {0}
+console.renderModeFallback            = Typ zobrazen\u00ED viditeln\u00E9ho podpisu je nastaven na "Obr\u00E1zek a popis", ale \u017E\u00E1dn\u00FD obr\u00E1zek nebyl nahr\u00E1n. Bude pou\u017Eit typ "Pouze popis".
 console.setAcro6Layers                = Pou\u017Eit\u00ED pouze vrstev doporu\u010Den\u00FDch v Acrobatu 6: {0}
 console.setCertificationLevel         = Nastavuji \u00FArove\u0148 certifikace
 console.setContact                    = Natavuji kontakt: {0}
